--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "react-scripts": "^5.0.1",
     "redux": "^4.0.5",
     "redux-logger": "^3.0.6",
-    "redux-saga": "^1.1.3"
+    "redux-saga": "^1.1.3",
+    "sass": "^1.58.3"
   },
   "devDependencies": {
     "nodemon": "^2.0.4"
